fix: error css style ex:7

--- a/Modulo-1/2-css/2-ejercicios/08-display-basic/style.css
+++ b/Modulo-1/2-css/2-ejercicios/08-display-basic/style.css
@@ -1,27 +1,15 @@
-body {
-  background: #eee;
-  font-family: sans-serif;
+div {
+
 }
 
-.card {
-  width: 400px;
-  background: #fff;
-  margin: 16px auto;
+p{
+
 }
 
-.title {
-  background: #e3f4ff;
+span {
+
 }
 
-.content {
-  background: #e3f4ff;
-}
-
-.button-container {
-  background: #e3f4ff;
-}
-
-button {
-  background: white;
-  border: 1px solid #eee;
+a{
+  
 }
