--- a/Modulo-2/1-react/3-master-classes/19-01-2023/src/index.css
+++ b/Modulo-2/1-react/3-master-classes/19-01-2023/src/index.css
@@ -24,10 +24,11 @@ a:hover {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   display: flex;
   min-width: 320px;
   min-height: 100vh;
@@ -49,7 +50,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
