--- a/2023-track-01-febrero/afternoon-track/M1-javascript-developer/01-proyecto-dayseeker/style.css
+++ b/2023-track-01-febrero/afternoon-track/M1-javascript-developer/01-proyecto-dayseeker/style.css
@@ -34,6 +34,9 @@
 
   /* BORDER */
   --rc-border: 0.12rem solid var(--rc-color-n-050);
+
+  /* SIZING */
+  --rc-image-height: 18rem;
 }
 
 /* GLOBAL STYLES */
@@ -74,6 +77,10 @@ h2 {
   text-transform: uppercase;
 }
 
+h3 {
+  text-transform: uppercase;
+}
+
 h1 {
   font-size: var(--rc-typography-h1);
 }
@@ -84,6 +91,21 @@ h2 {
 
 li {
   list-style-type: none;
+}
+
+.rc-button {
+  border: var(--rc-border);
+  color: var(--rc-color-n-050);
+  text-transform: uppercase;
+  font-weight: 600;
+  background-color: transparent;
+  padding: var(--rc-btn-padding);
+  transition: all 0.3s ease-in-out;
+}
+
+.rc-button:hover {
+  background-color: var(--rc-color-n-050);
+  color: var(--rc-color-n-500);
 }
 
 /* LAYOUT */
@@ -153,7 +175,7 @@ li {
     display: none;
   }
 
-  /* WHEN CHECKED -> GENERAL SIBLING COMB */
+  /* WHEN CHECKED -> GENERAL SIBLING COMBINATOR */
   .rc-hamburger:checked ~ .rc-section-nav {
     display: block;
     padding: var(--rc-section-padding);
@@ -161,5 +183,79 @@ li {
   /* COLUMN NAV ITEMS */
   .rc-section-header-nav {
     flex-direction: column;
+  }
+}
+
+/* HERO */
+.rc-section-hero {
+  height: 40vh;
+  overflow: hidden;
+}
+
+.rc-section-hero--banner {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  animation: zoomBanner 4s;
+}
+
+@keyframes zoomBanner {
+  0% {
+    transform: scale(1.5);
+    filter: blur(14px) brightness(0%) saturate(0%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+/* FEATURED ITEMS */
+.rc-section-featured {
+  flex-direction: column;
+  padding: var(--rc-section-padding);
+}
+
+.rc-section-featured__gallery {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  width: 80vw;
+}
+
+.rc-section-featured__article {
+  flex-direction: column;
+}
+
+.rc-section-featured--preview {
+  width: auto;
+  height: var(--rc-image-height);
+}
+
+.rc-section-featured--price {
+  color: var(--rc-color-typography-price);
+}
+
+/* VIDEO */
+.rc-section-video {
+  flex-direction: column;
+  height: 40vh;
+  overflow: hidden;
+}
+
+.rc-section-video__description {
+  flex-direction: column;
+  position: absolute;
+  text-align: center;
+  gap: var(--rc-gap);
+  /* CON Z INDEX COLOCAMOS +1 LA DESCRIPCION POR ENCIMA DEL VIDEO */
+  z-index: 1;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 48rem) {
+  :root {
+    --rc-typography-h1: calc(1.9rem / 1.5);
   }
 }
