--- a/2023-track-01-febrero/morning-track/M1-javascript-developer/morning-track/proyecto-landing/style.css
+++ b/2023-track-01-febrero/morning-track/M1-javascript-developer/morning-track/proyecto-landing/style.css
@@ -1,16 +1,16 @@
 
 :root {
-	--rc-color-brand: #CB1C8D;
+	--rc-color-brand: #28e04a;
 
   /* COLOR PALETTE */
 
   --rc-color-n-000: #fff;
-  --rc-color-n-050: #f5f5f5;
-  --rc-color-n-100: #FFAACF;
-  --rc-color-n-300: #F56EB3;
-  --rc-color-n-500: #CB1C8D;
-  --rc-color-n-700: #7F167F;
-  --rc-color-n-900: #460C68;
+  --rc-color-n-050: #def7da;
+  --rc-color-n-100: #bff6c2;
+  --rc-color-n-300: #80e99e;
+  --rc-color-n-500: #12b73c;
+  --rc-color-n-700: #088427;
+  --rc-color-n-900: #0b3702;
 
   /* BACKGROUND COLOR */
   
@@ -33,8 +33,8 @@
 
   /* FONT SIZE */
 
-  --rc-typography-h1: 1.9375rem;
-  --rc-typography-h2: 1.5625rem;
+  --rc-typography-h1: 5.9375rem;
+  --rc-typography-h2: 3.5625rem;
   --rc-typography-h3: 1.25rem;
   --rc-typography-p : 1rem;
   --rc-typography-s : .8125rem;
