--- a/2023-track-01-febrero/morning-track/M1-javascript-developer/rick-morty-app/src/page/details/details.css
+++ b/2023-track-01-febrero/morning-track/M1-javascript-developer/rick-morty-app/src/page/details/details.css
@@ -5,4 +5,7 @@
   gap: 5px;
   overflow: auto;
   height: 100vh;
+  background: url('./space.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
