--- a/2023-track-01-febrero/morning-track/M1-javascript-developer/rick-morty-app/style.css
+++ b/2023-track-01-febrero/morning-track/M1-javascript-developer/rick-morty-app/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mynerve&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap');
 
 :root {
   --left-bg-color: rgba(150, 150, 230, 0.7);
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: 'Mynerve', cursive;
+  font-family: 'Libre Franklin', sans-serif;
   height: 100vh;
   margin: 0;
 }
