feat: wip arm-portfolio

--- a/2023-track-01-febrero/morning-track/M1-javascript-developer/arm-portfolio/style.css
+++ b/2023-track-01-febrero/morning-track/M1-javascript-developer/arm-portfolio/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .light {
-  background-color: var(--bg-light);
+  background-image: linear-gradient(to right, rgba(168,63,251,1) 0%, rgba(63,94,251,1) 50%, rgba(252,70,107,1) 100%);
   color: var(--primary-light);
 }
 
